syntax = "proto3";

package cz.tyckouni.passgate.store;

option java_multiple_files = true;
option java_package = "cz.tyckouni.passgate.store.grpc";

service IdpService {
  rpc findByGuid(FindByGuidRequest) returns (Idp) {}
}

message FindByGuidRequest {
  string guid = 1;
}

message Idp {
  string guid = 1;
  string name = 2;
}